Successfully tested custom metrics